# ocaml

./: .Diff-of-diff.diff  .depend  .depend.menhir  .gitattributes  .gitignore  .gitmodules  .travis-ci.sh  CONTRIBUTING.md  Changes  HACKING.adoc  Makefile  Makefile.best_binaries  Makefile.build_config.in  Makefile.common  Makefile.common.in  Makefile.config.in  Makefile.config_if_required  Makefile.menhir  Makefile.nt  Makefile.shared  Makefile.tools  README.adoc  README.win32.adoc  VERSION  aclocal.m4  appveyor.yml  autogen  backports  backports-generated  branches  concat.cs  configure  configure.ac  diff-against-4.14-runtime.diff  diff-against-trunk-support.diff  diff-against-trunk-system.diff  dune  foo.txt  mpr7557.patch  myocamlbuild.ml  (+7 more)
api_docgen/: Makefile  Makefile.common  Makefile.docfiles
asmcomp/: CSE.mli  CSEgen.ml  CSEgen.mli  afl_instrument.ml  archgen.mli  asmgen.ml  asmlibrarian.ml  asmlink.ml  asmpackager.ml  branch_relaxation.ml  branch_relaxation_intf.mli  cmm.ml  cmm.mli  cmm_helpers.ml  cmm_helpers.mli  cmmgen.ml  cmmgen.mli  coloring.ml  comballoc.ml  default.ml  default.ml.in  default.mli  emitaux.ml  emitaux.mli  emitenv.mli  interf.ml  interval.ml  linear.ml  linear.mli  linearize.ml  linscan.ml  liveness.ml  mach.ml  mach.mli  operations.ml  operations.mli  platform.ml  platform.mli  printcmm.ml  printcmm.mli  (+19 more)
asmrun/: .depend  Makefile  Makefile.nt  amd64.S  clambda_checks.c  fail.c  signals.c  signals_asm.c  startup.c
bench/: bench_buffer.ml  buffer.ml  small.ml  test.ml
boot/: ocamlc  ocamldep  ocamllex
build-aux/: ocaml_version.m4
bytecomp/: boot.mli  boot.mll  bytegen.ml  bytelibrarian.ml  bytelibrarian.mli  bytelink.ml  bytelink.mli  bytepackager.ml  bytesections.ml  cmo_format.mli  dll.ml  dll.mli  dune  emitcode.ml  make_opcodes.mli  make_opcodes.mll  opcodes.ml.c  symtable.ml  symtable.mli
byterun/: .depend  Makefile  Makefile.nt  alloc.c  backtrace.c  bigarray.c  caml_io.h  debugger.c  extern.c  fail.c  fail.h  fix_code.c  hash.c  intern.c  interp.c  intext.h  ints.c  io.c  md5.c  md5.h  startup.c  str.c  sys.c  terminfo.c  win32.c
camlp4/: Camlp4Bin.ml  Camlp4_config.ml
changes.d/: .gitattributes
compilerlibs/: META.in  Makefile.compilerlibs
config/: Makefile.mingw  Makefile.mingw64  Makefile.msvc  Makefile.msvc64  Makefile.nt  m-nt.h
debugger/: .depend  Makefile  Makefile.shared  command_line.ml  debugcom.ml  debugcom.mli  debugger_config.ml  exec.ml  frames.ml  main.ml  parameters.ml  program_loading.ml  time_travel.ml  unix_tools.ml
driver/: compenv.ml  compenv.mli  compile_common.ml  compiler_ppx.ml  compiler_ppx.mli  compmisc.ml  compmisc.mli  dump_cmi.ml  dump_cmi.mli  main.ml  main_args.ml  main_args.mli  maindriver.ml  makedepend.ml  optcompile.ml  optmain.ml  optmaindriver.ml  pparse.ml
file_formats/: cmi_format.ml  cmo_format.mli  cmt_format.ml  cmx_format.mli  cmxs_format.mli  linear_format.ml
lambda/: generate_runtimedef.sh  lambda.ml  lambda.mli  matching.ml  printlambda.ml  runtimedef.ml.c  runtimedef.mli  translattribute.ml  translclass.ml  translcore.ml  translmod.ml  translobj.ml  translprim.ml
lex/: Makefile  common.ml  main.ml
man/: Makefile
manual/: Makefile
middle_end/: closure_conversion.ml  compilenv.ml  compilenv.mli
ocamlbuild/: command.ml  findlib.ml  main.ml  my_std.ml  my_std.mli  ocamlbuild_executor.ml  ocamlbuild_unix_plugin.ml  options.ml  pathname.ml  shell.ml
ocamldoc/: .depend  Changes.txt  Makefile  Makefile.best_ocamldoc  Makefile.docfiles  Makefile.unprefix  odoc_args.ml  odoc_ast.ml  odoc_class.ml  odoc_config.ml  odoc_env.ml  odoc_html.ml  odoc_latex.ml  odoc_lexer.mll  odoc_messages.ml  odoc_misc.ml  odoc_print.ml  odoc_scan.ml  odoc_sig.ml  odoc_texi.ml  odoc_text_lexer.mll  ppx_stdlib.ml
ocamltest/: .depend  Makefile  actions_helpers.ml  actions_helpers.mli  builtin_actions.ml  environments.ml  environments.mli  filecompare.ml  main.ml  ocaml_actions.ml  ocaml_directories.ml  ocaml_directories.mli  ocaml_flags.ml  ocaml_modifiers.ml  (+9 more)
runtime/: .depend  ALL_C_SOURCES  Makefile  Makefile.in  Makefile.primitives  Mangling.md  RuntimeID.md  aclocal.m4  afl.c  alloc.c  amd64.S  amd64nt.asm  arm.S  arm64.S  array.c  backtrace.c  backtrace_byt.c  backtrace_nat.c  bigarray.c  callback.c  codefrag.c  coldstart.cmd  compact.c  compare.c  compression.c  configure  configure.ac  cstr.c  custom.c  debugger.c  domain.c  dynlink.c  dynlink_nat.c  eventlog.c  extern.c  fail_byt.c  fail_nat.c  fiber.c  fix_code.c  floats.c  (+51 more)
runtime/caml/: alloc.h  backtrace_prim.h  builtin_exns.h  callback.h  compact.h  compatibility.h  config.h  custom.h  domain.h  domain_state.h  domain_state.tbl  dynlink.h  exec.h.in  fail.h  fail.tbl  fiber.h  fix_code.h  instrtrace.h  instruct.tbl  intext.h  lf_skiplist.h  m.h.in  major_gc.h  memory.h  memprof.h  minor_gc.h  misc.h  mlvalues.h  osdeps.h  platform.h  prims.h  r.h.in  roots.h  runtime_events.h  s.h.in  shared_heap.h  signals.h  stack.h  startup.h  startup_aux.h  (+3 more)
tools/: .depend  Makefile  Makefile.nt  Makefile.shared  autogen  bump-magic-numbers  changes.sh  changesLexer.mll  check-ocamlc.opt  check-symbol-names  checkChanges.ml  convertChanges.ml  cvt_emit.mll  dumpobj.ml  dune  make-version-header.sh  objinfo.ml  ocamlcmt.ml  ocamlcp.ml  ocamldep.ml  ocamlmklib.ml  ocamlmklib.mlp  ocamlmktop.ml  ocamloptp.ml  ocamlprof.ml  opnames.ml.c  pre-commit-githook  primreq.ml  processChanges.ml  release-checklist  stripdebug.mli  test_install.ml
tools/ci/actions/: build-cygwin.cmd  build-env.cmd  build.cmd  changes.sh  check-changes-modified.sh  check-configure.sh  check-manual-modified.sh  check-typo.sh  configure.sh  cygwin.cmd  deepen-fetch.sh  msys2.cmd  msys2.sh  runner.sh  setup-dependencies  setup-dependencies.sh  setup-msys2.cmd  update-msys2.sh  windows-runner.sh  windows.sh
tools/ci/appveyor/: appveyor_build.cmd  appveyor_build.sh  gha_build.cmd  gha_build.sh
tools/ci/inria/: bootstrap  main
tools/ci/inria/bootstrap/: remove-sinh-primitive.patch
tools/ci/inria/step-by-step-build/: script
tools/ci/travis/: travis-ci.sh
(+794 files in other folders)
